--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<header>
+		<h1>Shaw's News</h1>
+	</header>
+	<section class = "article">
+		<div>
+			<h3>Latest News Articles</h3>
+		</div>
+		
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
