--- a/main.html
+++ b/main.html
@@ -10,14 +10,32 @@
 	<!-- the entire body must be written by student -->
 
 	<header>
-		<h1>Shaw's News</h1>
+		<h2>Shaw's News</h2>
 	</header>
-	<section class = "article">
-		<div>
-			<h3>Latest News Articles</h3>
+	<div class = "container">
+		<div class = "first-box">
+			<h4>Latest News Articles</h4>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class = "main-article">
+			<h4>Main Article</h4>
+			<p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+			
+		</div>
+		<div class = "pictures">
+			<h4>Pictorial News</h4>
+			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
+			<br>
+			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
+			<br>
+			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
 		</div>
 		
-	</section>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
