--- a/main.html
+++ b/main.html
@@ -9,12 +9,12 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<header>
+	<header class = "text-align: center">
 		<h2>Shaw's News</h2>
 	</header>
 	<div class = "container">
-		<div class = "first-box">
-			<h4>Latest News Articles</h4>
+		<div class = "latest-news-section">
+			<h3>Latest News Articles</h3>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
@@ -22,12 +22,12 @@
 			</ul>
 		</div>
 		<div class = "main-article">
-			<h4>Main Article</h4>
+			<h3>Main Article</h3>
 			<p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
 			
 		</div>
 		<div class = "pictures">
-			<h4>Pictorial News</h4>
+			<h3>Pictorial News</h3>
 			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
 			<br>
 			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
