--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 			<p> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
 			
 		</div>
-		<div class = "pictures">
+		<div class = "pictorial-news-section">
 			<h3>Pictorial News</h3>
 			<img src = "https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
 			<br>
